Cleanup from comments and docs and unused code